[package]
name = "rmd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
fuser = "0.17.0"
libc = "0.2.184"
log = "0.4.29"
russh = "0.60.0"
russh-sftp = "2.1.1"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dependencies.uuid]
version = "1.23.1"
features = ["v4"]

[dependencies.serde]
version = "1.0.228"
features = [ "serde_derive" ]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.netlink-bindings]
version = "0.3.0"
features = [ "rt-route" ]

[dependencies.netlink-socket2]
version = "0.3.0"
features = [ "async", "tokio" ]
